# ros2_bag_exporter

./: CMakeLists.txt  README.md  package.xml
config/: exporter_config.yaml
include/rosbag2_exporter/: bag_exporter.hpp
include/rosbag2_exporter/handlers/: base_handler.hpp  compressed_image_handler.hpp  depth_image_handler.hpp  gps_handler.hpp  image_handler.hpp  imu_handler.hpp  ir_image_handler.hpp  laser_scan_handler.hpp  odometry_handler.hpp  path_handler.hpp  pointcloud_handler.hpp
ros2bag_splitter/: split_ros2bag.sh  split_ros2bag_tool_usage.md
src/: bag_exporter.cpp
