<?xml version="1.0"?>
<package format="3">
  <name>ros2_bag_exporter</name>
  <version>0.0.1</version>
  <description>ROS 2 Bag Exporter Package</description>

  <maintainer email="abdalrahman.m5959@gmail.com">Geekgineer</maintainer>
  <license>Apache License 2.0</license>

  <!-- Build dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <!-- Runtime dependencies -->
  <depend>rclcpp</depend>
  <depend>rosbag2_cpp</depend>
  <depend>rosbag2_storage</depend>
  <depend>yaml-cpp</depend>
  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_io</depend>
  <depend>opencv</depend>
  <depend>ament_index_cpp</depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
